--- a/DataStructure/数据结构/线性表链式存储.md
+++ b/DataStructure/数据结构/线性表链式存储.md
@@ -817,7 +817,101 @@ public class DuplexLinkedList<T> implements List<T> {
 
 #### 代码编写
 
+```java
+/**
+ * 麻将数据 Bean
+ */
+public class Mahjong {
+    public int suit; //筒1，万2，索3
+    public int rank; //点数 一 二 三
+
+    public Mahjong(int suit,int rank){
+        this.suit = suit;
+        this.rank = rank;
+    }
+
+    @Override
+    public String toString() {
+        return "Mahjong{" +
+                "suit=" + suit +
+                ", rank=" + rank +
+                '}';
+    }
+}
+/**
+ * 基于系统 API LinkedList 将麻将进行分组排序
+ */
+public class ManjongSort {
+    /**
+     * 用系统自带的链表结构 LinkedList 来进行将麻将排序
+     */
+    public static void radixSort(LinkedList<Mahjong> list) {
+        // 1. 先把所有的点数分别装入到对应的链表组中
+        // 创建一个点数最大的为 9 的集合
+        LinkedList[] linkedList = new LinkedList[9];
+        // 先初始化这 9 个链表目的是妆所有的对应的点数
+        for (int i = 0; i < 9; i++) {
+            linkedList[i] = new LinkedList();
+        }
+        while (list.size() > 0) {
+            // 取出对应的元素放入到链表中
+            Mahjong mahjong = list.remove();
+            // mahjong.rank -1 的意思就是对应的集合下标
+            linkedList[mahjong.rank - 1].add(mahjong);
+        }
+
+        // 2. 然后再把所有的链表中的点数合并在一起
+        for (int i = 0; i < linkedList.length; i++) {
+            list.addAll(linkedList[i]);
+        }
+
+        // 3. 再把所有的点数分别装入到对象的链表中
+        // 花色有 3 个，那么就创建 3 个链表来代表装入对应的花色
+        LinkedList[] linkedLists = new LinkedList[3];
+        for (int i = 0; i < 3; i++) {
+            linkedLists[i] = new LinkedList();
+        }
+
+        // 把对应的花色装在对应的链表中
+        while (list.size() > 0) {
+            Mahjong mahjong = list.remove();
+            linkedLists[mahjong.suit - 1].add(mahjong);
+        }
+
+        // 4. 最后在把对应的点数链表装在一个新的集合中
+        for (int i = 0; i < linkedLists.length; i++) {
+            list.addAll(linkedLists[i]);
+        }
+    }
+
+    public static void main(String[] args) {
+        LinkedList<Mahjong> list = new LinkedList<>();
+        list.add(new Mahjong(2, 7));
+        list.add(new Mahjong(2, 9));
+        list.add(new Mahjong(1, 9));
+        list.add(new Mahjong(1, 6));
+        list.add(new Mahjong(3, 9));
+        list.add(new Mahjong(1, 1));
+        list.add(new Mahjong(2, 4));
+        list.add(new Mahjong(2, 2));
+        list.add(new Mahjong(2, 1));
+        list.add(new Mahjong(2, 3));
+        list.add(new Mahjong(1, 9));
+        list.add(new Mahjong(1, 5));
+        list.add(new Mahjong(3, 6));
+        list.add(new Mahjong(3, 8));
+        list.add(new Mahjong(1, 9));
+
+        radixSort(list);
+        System.out.println("list:" + list);
+    }
+}
 ```
+
+　　输出：
+
+```java
+list:[Mahjong{suit=1, rank=1}, Mahjong{suit=1, rank=5}, Mahjong{suit=1, rank=6}, Mahjong{suit=1, rank=9}, Mahjong{suit=1, rank=9}, Mahjong{suit=1, rank=9}, Mahjong{suit=2, rank=1}, Mahjong{suit=2, rank=2}, Mahjong{suit=2, rank=3}, Mahjong{suit=2, rank=4}, Mahjong{suit=2, rank=7}, Mahjong{suit=2, rank=9}, Mahjong{suit=3, rank=6}, Mahjong{suit=3, rank=8}, Mahjong{suit=3, rank=9}]
 
 ```
 
@@ -833,43 +927,619 @@ public class DuplexLinkedList<T> implements List<T> {
 
 #### 编写代码
 
-```
+```java
+/**
+ * 自己定义的双向链表结构 LinkedList
+ */
+public class CustomLinkedList<E> {
+    /**
+     * 链表的头部
+     */
+    transient Node<E> head;
+
+    /**
+     * 链表的尾部
+     */
+    transient Node<E> tail;
+
+    /**
+     * 当前链表的大小
+     */
+    transient int size;
+
+    /**
+     * 存入数据
+     *
+     * @param e
+     * @return
+     */
+    public boolean add(E e) {
+        linkLast(e);
+        return true;
+    }
+
+    /**
+     * 返回当前链表的大小
+     *
+     * @return
+     */
+    public int getSize() {
+        return size;
+    }
+
+    /**
+     * 将当前数据存入到链表的头部
+     *
+     * @param e
+     */
+    public void addFirst(E e) {
+        Node<E> h = head;
+        // 创建新节点
+        Node<E> newNode = new Node<>(null, e, head);
+        head = newNode;
+        if (h == null) {
+            tail = newNode;
+        } else {
+            h.pre = newNode;
+        }
+        size++;
+    }
+
+    /**
+     * 根据索引搜索到的节点数据
+     *
+     * @param index
+     * @return
+     */
+    public E get(int index) {
+        if (isPositionIndex(index)) {
+            return searchNode(index).data;
+        }
+        return null;
+    }
+
+    /**
+     * 根据索引添加数据
+     *
+     * @param index
+     * @param e
+     */
+    public void add(int index, E e) {
+        addIndex(index, e);
+    }
+
+    /**
+     * 删除第一个节点
+     *
+     * @return
+     */
+    public E remove() {
+        return removeFirst();
+    }
+
+    /**
+     * 删除头节点
+     *
+     * @return
+     */
+    private E removeFirst() {
+        Node<E> h = head;
+        if (h == null) {
+            throw new NoSuchElementException();
+        }
+        return unlinkFirst(h);
+    }
+
+    private E unlinkFirst(Node<E> h) {
+        // 删除的数据
+        E deleData = h.data;
+        // 找到要删除的后驱
+        Node next = h.next;
+
+        // 清理节点
+        h.data = null;
+        h.next = null;
+
+        // 将当前要删除的后驱置为链表头
+        head = next;
+        if (next == null) {
+            tail = null;
+        } else {
+            next.pre = null;
+        }
+        h = null;
+        size--;
+        return deleData;
+    }
+
+    private void addIndex(int index, E e) {
+        if (isPositionIndex(index)) {
+            // 找到当前需要插入的索引位置
+            if (index == size) {
+                linkLast(e);
+            } else {
+                add(e, searchNode(index));
+            }
+        }
+    }
+
+    /**
+     * 添加新节点到 searchNode 前驱
+     *
+     * @param e
+     * @param searchNode
+     */
+    private void add(E e, Node<E> searchNode) {
+        // 找到 searchNode 前驱节点
+        Node<E> snPre = searchNode.pre;
+        // 创建新节点
+        Node<E> newNode = new Node<>(snPre, e, searchNode);
+        searchNode.pre = newNode;
+        // 这里判断 snPre 是否为空，如果为空说明 head 没有数据，如果有数据就直接把 snPre.next() = newNode
+        if (snPre == null) {
+            head = newNode;
+        } else {
+            snPre.next = newNode;
+        }
+        size++;
+    }
+
+    private Node<E> searchNode(int index) {
+        // 优化寻找节点
+        // 如果 index > size/2 就从尾部开始查询，反之从 head 开始遍历查询
+        if (index > (size >> 1)) {
+            Node<E> t = tail;
+            for (int i = size - 1; i > index; i--) {
+                t = t.pre;
+            }
+            return t;
+        } else {
+            Node<E> h = head;
+            for (int i = 0; i < index; i++) {
+                h = h.next;
+            }
+            return h;
+        }
+    }
+
+    /**
+     * 将数据存入到当前链表尾部
+     *
+     * @param e
+     */
+    private void linkLast(E e) {
+        // 拿到尾部的节点数据
+        Node<E> t = tail;
+        // 创建新的节点数据，因为是存在当前节点的尾部
+        // 那么直接默认将当前添加进来的 E 的前驱设置为
+        // 当前链表中的尾部数据，现在已经形成单链表了
+        // 下一步直接形成双向链表
+        Node<E> newNode = new Node<>(t, e, null);
+        // 现在是双向链表，要把新的节点指向当前的尾部节点，尾部节点指向新的节点
+        tail = newNode;
+
+        // 如果尾部节点为空，那么说明 head 也是空数据，那就把新节点数据赋值给 head
+        if (t == null) {
+            head = newNode;
+        } else {
+            t.next = newNode;
+        }
+        size++;
+    }
+
+    /**
+     * 创建一个空的构造者
+     */
+    public CustomLinkedList() {
+
+    }
+
+    private boolean isPositionIndex(int index) {
+        return index >= 0 && index <= size;
+    }
+
+    /**
+     * 定义一个内部节点
+     * 双向链表需要前驱、后驱、数据
+     *
+     * @param <E>
+     */
+    public static class Node<E> {
+        /**
+         * 当前节点的前驱
+         */
+        private Node pre;
+
+        /**
+         * 当前节点的数据
+         */
+        private E data;
+        /**
+         * 当前节点的后驱
+         */
+        private Node next;
+
+        public Node(Node pre, E data, Node next) {
+            this.pre = pre;
+            this.data = data;
+            this.next = next;
+        }
+
+        @Override
+        public String toString() {
+            return "Node{" +
+                    "pre=" + (pre == null ? "null" : pre.data) +
+                    ", data=" + data +
+                    ", next=" + (next == null ? "null" : next.data) +
+                    '}';
+        }
+    }
+}
 
 ```
 
 #### 测试代码
 
-```
+```java
+    public static void main(String[] args) {
+        CustomLinkedList<Integer> linkedList = new CustomLinkedList<>();
+        linkedList.add(22);
+        linkedList.add(2);
+        linkedList.add(77);
+        linkedList.add(6);
+        linkedList.add(43);
+        linkedList.add(76);
+        linkedList.add(89);
 
+        linkedList.add(0, 0);
+
+        for (int i = 0; i < linkedList.size; i++) {
+            int integer = linkedList.get(i);
+            System.out.println("--CustomLinkedList--CustomLinkedList " + integer + "");
+        }
+        System.out.println("\n");
+        Integer remove = linkedList.remove();
+        System.out.println("--CustomLinkedList--CustomLinkedList remove " + remove);
+        Integer remove1 = linkedList.remove();
+        System.out.println("--CustomLinkedList--CustomLinkedList remove " + remove1 + "");
+        Integer remove2 = linkedList.remove();
+        System.out.println("--CustomLinkedList--CustomLinkedList remove " + remove2 + "");
+
+        System.out.println("\n");
+        for (int i = 0; i < linkedList.size; i++) {
+            int integer = linkedList.get(i);
+            System.out.println("--CustomLinkedList--CustomLinkedList " + integer + "");
+        }
+    }
 ```
 
 #### 测试结果
 
+```java
+--CustomLinkedList--CustomLinkedList 0
+--CustomLinkedList--CustomLinkedList 22
+--CustomLinkedList--CustomLinkedList 2
+--CustomLinkedList--CustomLinkedList 77
+--CustomLinkedList--CustomLinkedList 6
+--CustomLinkedList--CustomLinkedList 43
+--CustomLinkedList--CustomLinkedList 76
+--CustomLinkedList--CustomLinkedList 89
+--CustomLinkedList--CustomLinkedList remove 0
+--CustomLinkedList--CustomLinkedList remove 22
+--CustomLinkedList--CustomLinkedList remove 2
+
+
+--CustomLinkedList--CustomLinkedList 77
+--CustomLinkedList--CustomLinkedList 6
+--CustomLinkedList--CustomLinkedList 43
+--CustomLinkedList--CustomLinkedList 76
+--CustomLinkedList--CustomLinkedList 89
 ```
-
-```
-
-
-
-
 
 ### 编写简单的 ArrayList CURD
 
-```
+```java
+/**
+ * 简单的 ArrayList
+ * @param <E>
+ */
+public class CustomArrayList<E> {
+    /**
+     * 默认的空元素对象
+     */
+    private static final Object[] DEFAULTCAPACITY_EMPTY_ELEMENTDATA = {};
+
+    /**
+     * 空元素数据
+     */
+    private static final Object[] EMPTY_ELEMENTDATA = {};
+
+    /**
+     * 默认的元素对象
+     */
+    private Object[] elementData = null;
+
+    /**
+     * 容量大小
+     */
+    private int size = 0;
+
+    /**
+     * 默认的容量大小
+     */
+    private static final int DEFAULT_CAPACITY = 10;
+
+    /**
+     * 最大的数量
+     */
+    private static final int MAX_ARRAY_SIZE = Integer.MAX_VALUE - 8;
+
+    /**
+     * 赋值为一个空对象
+     */
+    public CustomArrayList() {
+        elementData = DEFAULTCAPACITY_EMPTY_ELEMENTDATA;
+    }
+
+    /**
+     * 外部指定初始化一个容量大小
+     *
+     * @param initCapacity
+     */
+    public CustomArrayList(int initCapacity) {
+        if (initCapacity > 0) {
+            elementData = new Object[initCapacity];
+        } else if (initCapacity == 0) {
+            elementData = EMPTY_ELEMENTDATA;
+        } else {
+            throw new IllegalArgumentException("Illegal Capacity:" + initCapacity);
+        }
+    }
+
+    /**
+     * 添加数据
+     *
+     * @param e
+     * @return
+     */
+    public boolean add(E e) {
+        // 判断是否需要开辟容量空间
+        checkIsNeedCapacity(size + 1);
+        // 添加数据
+        elementData[size++] = e;
+        return true;
+    }
+
+    private void checkIsNeedCapacity(int minCapacity) {
+        if (elementData == DEFAULTCAPACITY_EMPTY_ELEMENTDATA) {
+            minCapacity = Math.max(DEFAULT_CAPACITY, minCapacity);
+        }
+        ensureExplicitCapacity(minCapacity);
+    }
+
+    private void ensureExplicitCapacity(int minCapacity) {
+        if (minCapacity - elementData.length > 0) {
+            grow(minCapacity);
+        }
+    }
+
+    /**
+     * 开辟空间的核心代码
+     *
+     * @param minCapacity
+     */
+    private void grow(int minCapacity) {
+        int oldCapacity = elementData.length;
+        int newCapacity = oldCapacity + (oldCapacity >> 1);
+        if (newCapacity - minCapacity < 0) {
+            newCapacity = minCapacity;
+        }
+        if (newCapacity - MAX_ARRAY_SIZE > 0) {
+            newCapacity = hugeCapacity(minCapacity);
+        }
+        elementData = Arrays.copyOf(elementData, newCapacity);
+    }
+
+    private static int hugeCapacity(int minCapacity) {
+        if (minCapacity < 0) {
+            throw new OutOfMemoryError();
+        }
+        return (minCapacity > MAX_ARRAY_SIZE) ? Integer.MAX_VALUE : MAX_ARRAY_SIZE;
+    }
+
+    @Override
+    public String toString() {
+        return "CustomArrayList{" +
+                "size=" + size +
+                "，elementData=" + Arrays.toString(elementData) +
+                '}';
+    }
+}
 
 ```
 
+#### 测试代码
 
+```java
+    public static void main(String[] args) {
+        CustomArrayList<Integer> arrayList = new CustomArrayList<>();
+        arrayList.add(1);
+        arrayList.add(33);
+        arrayList.add(45);
+        arrayList.add(8);
+        arrayList.add(96);
+        System.out.println("arrayList：" + arrayList);
+    }
+```
 
-#### 编写单向链表结构的 CURD
+#### 测试结果
+
+```java
+arrayList：CustomArrayList{size=5，elementData=[1, 33, 45, 8, 96, null, null, null, null, null]}
+```
+
+### 编写单向链表结构的 CURD
 
 ![](image/单向链表.png)
 
-```
+```java
+/**
+ * 单向链表
+ */
+public class SingleLinked<T> {
+    /**
+     * 头结点
+     */
+    Node<T> head;
+
+    /**
+     * 链表长度
+     */
+    int size = 0;
+
+    /**
+     * 将数据添加到链表中
+     *
+     * @param data
+     */
+    public void add(T data) {
+        Node node = new Node(data);
+        if (head == null) {
+            head = node;
+            return;
+        }
+        Node<T> tmp = head;
+        while (tmp.next != null) {
+            tmp = tmp.next;
+        }
+        tmp.next = node;
+        size++;
+    }
+
+    /**
+     * 将数据添加到第一个位置
+     *
+     * @param data
+     */
+    public void addHead(T data) {
+        Node node = new Node(data);
+        if (head == null) {
+            head = node;
+            size++;
+            return;
+        }
+        Node n = head;
+        node.next = n;
+        head = node;
+
+        size++;
+    }
+
+    public void add(int index, T data) {
+        Node node = new Node(data);
+        if (index == 0) {
+            addHead(data);
+        } else {
+            Node tmp = head;
+            for (int i = 0; i < index - 1; i++) {
+                tmp = tmp.next;
+            }
+            Node n = tmp.next;
+            tmp.next = node;
+            node.next = n;
+            size++;
+        }
+    }
+
+    /**
+     * 全部清除数据
+     */
+    public void clear() {
+        head = null;
+        size = 0;
+    }
+
+    public boolean remove(int index) {
+        Node<T> tmp = head;
+        if (index == 0) {
+            Node<T> newHead = tmp.next;
+            head = newHead;
+            size--;
+            return true;
+        }
+        if (index < size) {
+            for (int i = 0; i < index - 2; i++) {
+                tmp = tmp.next;
+            }
+            Node<T> pre = tmp;
+            // 要删除的节点
+            Node<T> next = tmp.next;
+            Node<T> p = tmp.next.next;
+            pre.next = p;
+            next = null;
+            size--;
+            return true;
+        }
+        return false;
+    }
+
+    /**
+     * 节点数据
+     *
+     * @param <T>
+     */
+    private class Node<T> {
+        T data;
+        Node<T> next;
+
+        public Node(T data, Node<T> next) {
+            this.data = data;
+            this.next = next;
+        }
+
+        public Node(T next) {
+            this.data = next;
+        }
+    }
+
+    private void println() {
+        if (head == null) return;
+        Node n = head;
+
+        while (n != null) {
+            System.out.print(n.data + "=>");
+            n = n.next;
+        }
+    }
+}
 
 ```
 
+#### 测试代码
 
+```java
+    public static void main(String[] args) {
+        SingleLinked singleLinked = new SingleLinked();
+        singleLinked.add(22);
+        singleLinked.add(2);
+        singleLinked.add(77);
+        singleLinked.add(6);
+        singleLinked.add(43);
+        singleLinked.add(76);
+        singleLinked.add(89);
+        singleLinked.println();
+        singleLinked.remove(3);
+        System.out.print("\nremove 3:");
+        singleLinked.println();
+    }
+```
+
+#### 测试结果
+
+```java
+22=>2=>77=>6=>43=>76=>89=>
+remove 3:22=>2=>6=>43=>76=>89=>
+```
 
 ## 4. 参考文章
 
