--- a/DataStructure/数据结构/线性表顺序存储.md
+++ b/DataStructure/数据结构/线性表顺序存储.md
@@ -105,17 +105,270 @@
 
 　　可以把上面线性表的基本操作提炼出一个 Java 接口的 List.java：
 
-```
-数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```java
+/**
+ * 链表的接口
+ * @param <T>
+ */
+public interface List<T>{
+    /**
+     * 添加节点
+     * @param t
+     */
+    void add(T t);
+
+    /**
+     * 添加节点到索引 index
+     * @param index
+     * @param t
+     */
+    void add(int index, T t);
+
+    /**
+     * 获取索引 index 的值
+     * @param index
+     * @return
+     */
+    T get(int index);
+
+    /**
+     * 获取 t 在链表中的索引
+     * @param t
+     * @return
+     */
+    int indexOf(T t);
+
+    /**
+     * 移除 t
+     * @param t
+     * @return
+     */
+    boolean remove(T t);
+
+    /**
+     * 移除索引 index 上的值
+     * @param index
+     * @return
+     */
+    T remove(int index);
+
+    /**
+     * 清空链表
+     */
+    void clear();
+
+    /**
+     * 链表的大小
+     * @return
+     */
+    int size();
+}
 ```
 
 　　实现类如下：
 
-```
-数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```java
+/**
+ * 顺序存储的线性表
+ */
+public class ArrayList<T> implements List<T> {
+
+    private static final int DEFAULT_SIZE = 16;
+
+    private Object[] array;
+
+    private int capacity;
+
+    private int size;
+
+    public ArrayList() {
+        capacity = DEFAULT_SIZE;
+        array = new Object[capacity];
+    }
+
+    public ArrayList(int size) {
+        capacity = 1;
+        // 把 capacity 设置为大于 size 的最小的 2 的 n 次方
+        while (capacity < size) {
+            capacity <<= 1;
+        }
+        array = new Object[capacity];
+    }
+
+    /**
+     * 扩容
+     *
+     * @param expectCapacity
+     */
+    private void ensureSize(int expectCapacity) {
+        // 如果当前的通量小于期望的容量
+        if (expectCapacity > capacity) {
+            // 不断的将  capacity * 2，直到 capacity 大于 expectCapacity
+            while (capacity < expectCapacity) {
+                capacity <<= 1;
+            }
+            array = Arrays.copyOf(array, capacity);
+        }
+    }
+
+    /**
+     * 检查是否越界
+     *
+     * @param index
+     * @param size
+     */
+    private void checkIndexOutOdBound(int index, int size) {
+        if (index < 0 || index > size) {
+            throw new IndexOutOfBoundsException("index large than size");
+        }
+    }
+
+    /**
+     * 向最后一个位置添加元素
+     *
+     * @param t
+     */
+    @Override
+    public void add(T t) {
+        add(size, t);
+    }
+
+    /**
+     * 在某个特定的位置添加元素
+     *
+     * @param index
+     * @param t
+     */
+    @Override
+    public void add(int index, T t) {
+        checkIndexOutOdBound(index, size);
+        ensureSize(capacity + 1);
+        System.arraycopy(array, index, array, index + 1, size - index);
+        array[index] = t;
+        size++;
+    }
+
+    /**
+     * 获取某个元素的位置
+     *
+     * @param index
+     * @return
+     */
+    @Override
+    public T get(int index) {
+        checkIndexOutOdBound(index, size - 1);
+        return (T) array[index];
+    }
+
+    /**
+     * 获取某个元素的位置
+     *
+     * @param t
+     * @return
+     */
+    @Override
+    public int indexOf(T t) {
+        for (int i = 0; i < size; i++) {
+            Object obj = array[i];
+            if (obj == null && t == null) {
+                return i;
+            }
+            if (obj != null && obj.equals(t)) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    /**
+     * 删除某个元素
+     *
+     * @param t
+     * @return
+     */
+    @Override
+    public boolean remove(T t) {
+        int index = indexOf(t);
+        if (index != -1) {
+            remove(index);
+        }
+        return index != -1;
+    }
+
+    /**
+     * 删除某个位置的元素
+     *
+     * @param index
+     * @return
+     */
+    @Override
+    public T remove(int index) {
+        checkIndexOutOdBound(index, size - 1);
+        T oldValue = (T) array[index];
+        int copySize = size - index - 1;
+        // 如果是删除最后一个元素则不需要 copy
+        // 或者 index = size -1
+        if (copySize > 0) {
+            System.arraycopy(array, index + 1, array, index, copySize);
+        }
+        // index 位置的元素向左移动，则需要把最后一个元素置为 null，避免内存泄漏
+        array[--size] = null;
+        return oldValue;
+    }
+
+    /**
+     * 清空所有元素
+     */
+    @Override
+    public void clear() {
+        for (int i = 0; i < size; i++) {
+            array[i] = null;
+        }
+        size = 0;
+    }
+
+    @Override
+    public int size() {
+        return size;
+    }
+
+    public String toString() {
+        if (size == 0) {
+            return "[]";
+        }
+        StringBuilder sb = new StringBuilder();
+        sb.append('[');
+        for (int i = 0; i < size; i++) {
+            sb.append(array[i]).append(',');
+        }
+        sb.deleteCharAt(sb.length() - 1);
+        sb.append(']');
+        return sb.toString();
+    }
+}
+
 ```
 
+　　测试：
 
+```java
+    public static void main(String[] args) {
+        ArrayList<String> arrayList = new ArrayList<>();
+        arrayList.add("a");
+        arrayList.add("b");
+        arrayList.add("c");
+        System.out.println(arrayList.size() + "," + arrayList);
+        arrayList.remove(1);
+        System.out.println("remove:" + arrayList.size() + "," + arrayList);
+    }
+```
+
+　　输出：
+
+```java
+3,[a,b,c]
+remove:2,[a,c]
+```
 
 ## 对比 JDK 中的 ArrayList
 
@@ -125,11 +378,26 @@
 
 　　以上代码不支持 forEach 迭代，为了实现能够支持 forEach 迭代，需要实现 java.lang.Iterable 接口，如下所示：
 
-```
-数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
-```
+```java
+    @Override
+    public Iterator<T> iterator() {
+        return new MyIterator();
+    }
 
+    class MyIterator implements Iterator {
+        private int index = 0;
 
+        @Override
+        public boolean hasNext() {
+            return index < size();
+        }
+
+        @Override
+        public T next() {
+            return get(index++);
+        }
+    }
+```
 
 ### 2. 扩容机制
 
@@ -226,14 +494,86 @@ private static void iteratorMultipleThread() {
 
 　　可以把 iterator 操作放进 synchornized 同步代码块。如：
 
-```
-数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```java
+private static void fixIteratorMultipleThread() {
+        java.util.ArrayList<Integer> list = new java.util.ArrayList<>();
+        for (int i = 0; i < 10; i++) {
+            list.add(i);
+        }
+
+        String flag = "flag";
+
+        new Thread(new Runnable() {
+            @Override
+            public void run() {
+                synchronized (flag) {
+                    Iterator<Integer> iterator = list.iterator();
+                    while (iterator.hasNext()) {
+                        System.out.println("迭代：" + iterator.next());
+                        try {
+                            Thread.sleep(10);//出让cpu资源
+                        } catch (InterruptedException e) {
+                            e.printStackTrace();
+                        }
+                    }
+                }
+            }
+        }).start();
+
+
+        new Thread(new Runnable() {
+            @Override
+            public void run() {
+                synchronized (flag) {
+                    Iterator<Integer> iterator = list.iterator();
+                    while (iterator.hasNext()) {
+                        int i = iterator.next();
+                        if (i % 2 == 0) {
+                            iterator.remove();
+                            System.out.println("移除：" + i);
+                        }
+                    }
+                }
+            }
+        }).start();
+
+    }
 ```
 
 　　synchronized 虽然可以解决这个问题，但是失去了并发性，上面虽然有两个线程，但是需要等待一个线程执行完毕，另一个线程才能执行。可以使用支持并发的 CopyOnWriteArrayList 代替 synchronzied 的方式。例如下面的操作，迭代的过程中不断的插入（thread1 插入，thread2 迭代）。
 
-```
-数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```java
+    private static void fixIteratorMultipleThread2() {
+        CopyOnWriteArrayList<Integer> list = new CopyOnWriteArrayList<>();
+//        java.util.ArrayList<Integer> list = new java.util.ArrayList<>();
+        Thread thread = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                int i = 1;
+                while (true) {
+                    list.add(i++);
+                    System.out.println(i + "---------add");
+                }
+            }
+        });
+        thread.setDaemon(true);
+        thread.start();
+
+        Thread thread2 = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                try {
+                    Thread.sleep(1);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                for (int value : list) {
+                    System.out.println("------" + value);
+                }
+            }
+        });
+        thread2.start();
+    }
 ```
 
 　　下面说一下 Vector 类。
