--- a/DataStructure/算法/排序算法/基数排序.md
+++ b/DataStructure/算法/排序算法/基数排序.md
@@ -27,23 +27,104 @@
 
 　　基数排序：通过序列中各个元素的值，对排序的 N 个元素进行若干趟的 “ 分配 ” 与 “ 收集 ” 来实现排序。
 
-* 分配：将 L[i] 中的元素取出，首先
+* 分配：将 L[i] 中的元素取出，首先确定其个位上的数字，根据该数字分配到与之序号相同的桶中。
+* 收集：当序列中所有的元素都分配到对应的桶中，再按照顺序依次将桶中的元素收集形成新的一个待排序列 L[]。对新形成的序列 L[] 重复执行分配和收集元素中的十位、百位...直到分配完该序列中的最高位，则排序结束。
 
+```java
+/**
+ * 基数排序
+ */
+public class CardinalSort {
 
+    public static void sort(int[] arr) {
+        if (arr.length <= 1) return;
+        // 取得数组中的最大数，并取得位数
+        int max = 0;
+        for (int i = 0; i < arr.length; i++) {
+            if (max < arr[i]) {
+                max = arr[i];
+            }
+        }
+        // 最大位数
+        int maxDigit = 1;
+        while (max / 10 > 0) {
+            maxDigit++;
+            max = max / 10;
+        }
+
+        // 申请一个桶空间，0-9 个桶
+        int[][] buckets = new int[10][arr.length];
+        int base = 10;
+
+        // 从低位到高位，对每一位遍历，将所有元素分配到桶中
+        for (int i = 0; i < maxDigit; i++) {
+            int[] bktLen = new int[10]; // 存储各个桶中存储元素的数量
+            // 分配：将所有元素分配到桶中
+            for (int j = 0; j < arr.length; j++) {
+                // 取得第低 base 1 位的值,比如 arr[j] = 123，base 为 100,则 whichBucket = 2
+                int whichBucket = (arr[j] % base) / (base / 10);
+                //将这个数放入到第 whichBucket 的桶的顶部
+                buckets[whichBucket][bktLen[whichBucket]] = arr[j];
+                bktLen[whichBucket]++;
+            }
+            // 收集：将不同桶中数据挨个捞出来，为下一轮高位排序做准备，由于靠近桶底的元素排名考前，因此从桶底先捞
+            int k = 0;
+            for (int b = 0; b < buckets.length; b++) {
+                for (int p = 0; p < bktLen[b]; p++) {
+                    arr[k++] = buckets[b][p];
+                }
+            }
+            System.out.println("Sorting:" + Arrays.toString(arr));
+            base *= 10;
+        }
+
+    }
+
+    public static void main(String[] args) {
+        int a[] = new int[]{199, 451, 2, 27, 654, 1238, 76, 33, 5};
+        sort(a);
+        System.out.println("a:" + Arrays.toString(a));
+    }
+}
+```
+
+　　输出：
+
+```java
+Sorting:[451, 2, 33, 654, 5, 76, 27, 1238, 199]
+Sorting:[2, 5, 27, 33, 1238, 451, 654, 76, 199]
+Sorting:[2, 5, 27, 33, 76, 199, 1238, 451, 654]
+Sorting:[2, 5, 27, 33, 76, 199, 451, 654, 1238]
+a:[2, 5, 27, 33, 76, 199, 451, 654, 1238]
+```
 
 ## 复杂度分析
 
+　　以下是基数排序算法复杂度，其中 k 为最大数的位数：
 
+| 平均时间复杂度 | 最好情况   | 最坏情况   | 空间复杂度 |
+| -------------- | ---------- | ---------- | ---------- |
+| O(d*(n+r))     | O(d*(n+r)) | O(d*(n+r)) | O(n+r)     |
+
+　　其中，d 为位数，r 为基数，n 为原数组个数。在基数排序中，因为没有比较操作，所以在复杂上，最好的情况与最坏的情况在时间上是一致的，均为 O(d*(n+r))。
 
 ## 总结和思考
 
+　　基数排序更适合用于对时间、字符串等这些整体权值未知的数据进行排序。
 
+　　基数排序不改变相同元素之间的相对顺序，因此它是稳定的排序算法。
+
+### 基数排序 vs 计数排序 vs 桶排序
+
+　　这三种排序算法都利用了桶的概念，但对桶的使用方法上由明显差异：
+
+1. 基数排序：根据键值的每位数字来分配桶。
+2. 计数排序：每个桶只存储单一键值。
+3. 桶排序：每个桶存储一定范围的数值。
 
 
 
 ## 参考文章
 
 1. [Java实现八大排序算法](https://www.cnblogs.com/morethink/p/8419151.html)
-
-7. [常见数据结构与算法整理总结（下）](https://www.jianshu.com/p/42f81846c0fb)
 
