--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -165,6 +165,9 @@
 16. 哈希查找
 17. 斐波那契查找
 18. 希尔排序
+19. 平衡查找树之红黑树（Red-Black Tree）
+20. 查找之B 树和 B+ 树（B Tree/B+ 树）
+21. 分块查找
 
 #### 计划
 
@@ -176,9 +179,9 @@
    5. 斐波那契查找 - 已完成
    6. 二叉树查找 - 已完成
    7. 平衡查找树之2-3查找树（2-3 Tree） - 已完成
-   8. 平衡查找树之红黑树（Red-Black Tree）
-   9. B 树和 B+ 树（B Tree/B+ 树）
-   10. 分块查找 
+   8. 平衡查找树之红黑树（Red-Black Tree）- 已完成
+   9. B 树和 B+ 树（B Tree/B+ 树） - 已完成
+   10. 分块查找  - 已完成
    11. 哈希查找  - 已完成
 2. 排序算法
    1. 排序算法总结
@@ -215,6 +218,10 @@
 
 
 
+
+
+
+
 7/14
 
 * b树
@@ -246,17 +253,14 @@
 7/21
 
 * 栈
-* 平衡查找树之红黑树（Red-Black Tree）
 * 回溯算法
 
 7/22
 
-* B 树和 B+ 树（B Tree/B+ 树）
 * 排序算法总结
 
 7/23
 
-* 分块查找
 * 快速排序
 * 直接插入排序
 
@@ -339,6 +343,8 @@
    * String
    * 动态代理类 Proxy
    * PriorityQueue
+   * transient
+   * CopyOnWriteArrayList
    * ReentrantLock - 已完成
    * Condition - 已完成
    * ConcurrentHashMap - 已完成
